[gd_scene load_steps=10 format=3 uid="uid://b4q8x7nan2pls"]

[ext_resource type="Script" uid="uid://dcqlw1fqjrlfm" path="res://level1/overseers_office.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dsrnv7h3utneg" path="res://level1/overseers_office.jpg" id="2"]
[ext_resource type="Theme" path="res://default_theme.tres" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_SureButton"]
bg_color = Color(0.016, 0.82, 0.698, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.02, 0.9, 0.77, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_SureButton_Hover"]
bg_color = Color(0.02, 0.9, 0.77, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.03, 1, 0.85, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_SureButton_Pressed"]
bg_color = Color(0.012, 0.7, 0.6, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.016, 0.82, 0.698, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_MaybeLaterButton"]
bg_color = Color(0.729, 0.306, 0, 0.8)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.82, 0.35, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_MaybeLaterButton_Hover"]
bg_color = Color(0.82, 0.35, 0, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.9, 0.4, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_MaybeLaterButton_Pressed"]
bg_color = Color(0.63, 0.26, 0, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.729, 0.306, 0, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="OverseersOffice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 6

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -391.5
offset_right = 250.0
offset_bottom = -229.5
grow_horizontal = 2
grow_vertical = 2

[node name="LeftVBox" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="HBoxContainer/LeftVBox"]
layout_mode = 2
theme = ExtResource("3")
text = "Overseer's Office"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BreakTimerPanel" type="Panel" parent="HBoxContainer/LeftVBox"]
self_modulate = Color(1, 1, 1, 0.7)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="BreakTimerBar" type="ProgressBar" parent="HBoxContainer/LeftVBox/BreakTimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 100.0
show_percentage = false

[node name="BreakTimer" type="Label" parent="HBoxContainer/LeftVBox/BreakTimerPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
text = "Break Timer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SuspicionPanel" type="Panel" parent="HBoxContainer/LeftVBox"]
visible = false
self_modulate = Color(1, 1, 1, 0.7)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="SuspicionBar" type="ProgressBar" parent="HBoxContainer/LeftVBox/SuspicionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
show_percentage = false

[node name="SuspicionLabel" type="Label" parent="HBoxContainer/LeftVBox/SuspicionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
text = "Suspicion"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinsPanel" type="Panel" parent="HBoxContainer/LeftVBox"]
self_modulate = Color(1, 1, 1, 0.7)
custom_minimum_size = Vector2(0, 24)
layout_mode = 2

[node name="CoinsLabel" type="Label" parent="HBoxContainer/LeftVBox/CoinsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3")
text = "Coins: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightVBox" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2

[node name="TalkButton" type="Button" parent="HBoxContainer/RightVBox"]
visible = false
layout_mode = 2
theme = ExtResource("3")
text = "Talk"

[node name="StealWritButton" type="Button" parent="HBoxContainer/RightVBox"]
visible = false
layout_mode = 2
theme = ExtResource("3")
text = "Steal Writ of Passage"

[node name="BackButton" type="Button" parent="HBoxContainer/RightVBox"]
layout_mode = 2
theme = ExtResource("3")
text = "Back to Shop"

[node name="ConfirmationPopup" type="Panel" parent="."]
visible = false
z_index = 200
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationPopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PromptLabel" type="Label" parent="ConfirmationPopup/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3")
text = "Nothing to do on your break? want to chat?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationPopup/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="SureButton" type="Button" parent="ConfirmationPopup/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_SureButton")
theme_override_styles/hover = SubResource("StyleBoxFlat_SureButton_Hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_SureButton_Pressed")
text = "Sure"

[node name="MaybeLaterButton" type="Button" parent="ConfirmationPopup/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(1, 0.8, 0.8, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_MaybeLaterButton")
theme_override_styles/hover = SubResource("StyleBoxFlat_MaybeLaterButton_Hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_MaybeLaterButton_Pressed")
text = "Maybe Later"

[node name="TalkQuestionsPanel" type="Panel" parent="."]
visible = false
z_index = 150
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TalkQuestionsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="QuestionLabel" type="Label" parent="TalkQuestionsPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3")
text = "Loading question..."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnswerA" type="Button" parent="TalkQuestionsPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3")
text = "A) Loading..."

[node name="AnswerB" type="Button" parent="TalkQuestionsPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3")
text = "B) Loading..."

[node name="AnswerC" type="Button" parent="TalkQuestionsPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3")
text = "C) Loading..."

[node name="AnswerD" type="Button" parent="TalkQuestionsPanel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3")
text = "D) Loading..."

[connection signal="pressed" from="HBoxContainer/RightVBox/TalkButton" to="." method="_on_talk_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/StealWritButton" to="." method="_on_steal_writ_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RightVBox/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ConfirmationPopup/VBoxContainer/HBoxContainer/SureButton" to="." method="_on_sure_button_pressed"]
[connection signal="pressed" from="ConfirmationPopup/VBoxContainer/HBoxContainer/MaybeLaterButton" to="." method="_on_maybe_later_button_pressed"]
[connection signal="pressed" from="TalkQuestionsPanel/VBoxContainer/AnswerA" to="." method="_on_answer_selected" binds= ["A"]]
[connection signal="pressed" from="TalkQuestionsPanel/VBoxContainer/AnswerB" to="." method="_on_answer_selected" binds= ["B"]]
[connection signal="pressed" from="TalkQuestionsPanel/VBoxContainer/AnswerC" to="." method="_on_answer_selected" binds= ["C"]]
[connection signal="pressed" from="TalkQuestionsPanel/VBoxContainer/AnswerD" to="." method="_on_answer_selected" binds= ["D"]]
